--- a/web/css/site.css
+++ b/web/css/site.css
@@ -48,29 +48,7 @@ a.asc:after, a.desc:after {
     padding-left: 5px;
 }
 
-a.asc:after {
-    content: /*"\e113"*/ "\e151";
-}
 
-a.desc:after {
-    content: /*"\e114"*/ "\e152";
-}
-
-.sort-numerical a.asc:after {
-    content: "\e153";
-}
-
-.sort-numerical a.desc:after {
-    content: "\e154";
-}
-
-.sort-ordinal a.asc:after {
-    content: "\e155";
-}
-
-.sort-ordinal a.desc:after {
-    content: "\e156";
-}
 
 .grid-view th {
     white-space: nowrap;
@@ -112,4 +90,7 @@ a.desc:after {
 
 .nav > li > form > button.logout:focus {
     outline: none;
+}
+.a-my{
+    color: rgb(88, 88, 226);
 }
